as.output
Terminals unused in grammar

    STRING_LITERAL


State 1 conflicts: 1 shift/reduce
State 12 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: TEXT

    2 TEXT: PSEUDOS
    3     | LABEL STMTS
    4     | PSEUDOS TEXT
    5     | LABEL STMTS TEXT

    6 PSEUDOS: PSEUDO
    7        | PSEUDO PSEUDOS

    8 STMTS: STMT
    9      | PSEUDO
   10      | STMT STMTS
   11      | PSEUDO STMTS

   12 STMT: ADD STMT_ADD
   13     | MOV STMT_MOV
   14     | STR STMT_STR
   15     | LDR STMT_LDR
   16     | BX STMT_BX

   17 STMT_ADD: REGS ',' REGS ',' IMME
   18         | REGS ',' REGS ',' REGS

   19 STMT_MOV: REGS ',' REGS
   20         | REGS ',' IMME

   21 STMT_STR: REGS ',' ADDRS
   22         | REGS ',' ADDRS ',' IMME

   23 STMT_LDR: REGS ',' ADDRS
   24         | REGS ',' ADDRS ',' IMME

   25 STMT_BX: LR

   26 ADDRS: ADDR
   27      | ADDR '!'

   28 ADDR: '[' REGS ']'
   29     | '[' REGS ',' IMME ']'

   30 REGS: REG
   31     | SPECIAL_REG

   32 SPECIAL_REG: FP
   33            | SP
   34            | LR
   35            | IP

   36 IMME: '#' UnaryExp

   37 UnaryExp: NUMBER
   38         | '-' NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 27
    '#' (35) 36
    ',' (44) 17 18 19 20 21 22 23 24 29
    '-' (45) 38
    '[' (91) 28 29
    ']' (93) 28 29
    error (256)
    FP (258) 32
    SP (259) 33
    LR (260) 25 34
    IP (261) 35
    STRING_LITERAL (262)
    ADD (263) 12
    MOV (264) 13
    STR (265) 14
    LDR (266) 15
    BX (267) 16
    NUMBER <v_int> (268) 37 38
    REG <v_string> (269) 30
    PSEUDO <v_string> (270) 6 7 9 11
    LABEL <v_string> (271) 3 5


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    Start <p_list> (24)
        on left: 1
        on right: 0
    TEXT <p_list> (25)
        on left: 2 3 4 5
        on right: 1 4 5
    PSEUDOS <p_list> (26)
        on left: 6 7
        on right: 2 4 7
    STMTS <p_list> (27)
        on left: 8 9 10 11
        on right: 3 5 10 11
    STMT <p_list> (28)
        on left: 12 13 14 15 16
        on right: 8 10
    STMT_ADD <p_list> (29)
        on left: 17 18
        on right: 12
    STMT_MOV <p_list> (30)
        on left: 19 20
        on right: 13
    STMT_STR <p_list> (31)
        on left: 21 22
        on right: 14
    STMT_LDR <p_list> (32)
        on left: 23 24
        on right: 15
    STMT_BX <p_list> (33)
        on left: 25
        on right: 16
    ADDRS <p_list> (34)
        on left: 26 27
        on right: 21 22 23 24
    ADDR <p_list> (35)
        on left: 28 29
        on right: 26 27
    REGS <p_list> (36)
        on left: 30 31
        on right: 17 18 19 20 21 22 23 24 28 29
    SPECIAL_REG <p_list> (37)
        on left: 32 33 34 35
        on right: 31
    IMME <p_list> (38)
        on left: 36
        on right: 17 20 22 24 29
    UnaryExp <p_list> (39)
        on left: 37 38
        on right: 36


State 0

    0 $accept: . Start $end

    PSEUDO  shift, and go to state 1
    LABEL   shift, and go to state 2

    Start    go to state 3
    TEXT     go to state 4
    PSEUDOS  go to state 5


State 1

    6 PSEUDOS: PSEUDO .
    7        | PSEUDO . PSEUDOS

    PSEUDO  shift, and go to state 1

    PSEUDO    [reduce using rule 6 (PSEUDOS)]
    $default  reduce using rule 6 (PSEUDOS)

    PSEUDOS  go to state 6


State 2

    3 TEXT: LABEL . STMTS
    5     | LABEL . STMTS TEXT

    ADD     shift, and go to state 7
    MOV     shift, and go to state 8
    STR     shift, and go to state 9
    LDR     shift, and go to state 10
    BX      shift, and go to state 11
    PSEUDO  shift, and go to state 12

    STMTS  go to state 13
    STMT   go to state 14


State 3

    0 $accept: Start . $end

    $end  shift, and go to state 15


State 4

    1 Start: TEXT .

    $default  reduce using rule 1 (Start)


State 5

    2 TEXT: PSEUDOS .
    4     | PSEUDOS . TEXT

    PSEUDO  shift, and go to state 1
    LABEL   shift, and go to state 2

    $default  reduce using rule 2 (TEXT)

    TEXT     go to state 16
    PSEUDOS  go to state 5


State 6

    7 PSEUDOS: PSEUDO PSEUDOS .

    $default  reduce using rule 7 (PSEUDOS)


State 7

   12 STMT: ADD . STMT_ADD

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    STMT_ADD     go to state 22
    REGS         go to state 23
    SPECIAL_REG  go to state 24


State 8

   13 STMT: MOV . STMT_MOV

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    STMT_MOV     go to state 25
    REGS         go to state 26
    SPECIAL_REG  go to state 24


State 9

   14 STMT: STR . STMT_STR

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    STMT_STR     go to state 27
    REGS         go to state 28
    SPECIAL_REG  go to state 24


State 10

   15 STMT: LDR . STMT_LDR

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    STMT_LDR     go to state 29
    REGS         go to state 30
    SPECIAL_REG  go to state 24


State 11

   16 STMT: BX . STMT_BX

    LR  shift, and go to state 31

    STMT_BX  go to state 32


State 12

    9 STMTS: PSEUDO .
   11      | PSEUDO . STMTS

    ADD     shift, and go to state 7
    MOV     shift, and go to state 8
    STR     shift, and go to state 9
    LDR     shift, and go to state 10
    BX      shift, and go to state 11
    PSEUDO  shift, and go to state 12

    PSEUDO    [reduce using rule 9 (STMTS)]
    $default  reduce using rule 9 (STMTS)

    STMTS  go to state 33
    STMT   go to state 14


State 13

    3 TEXT: LABEL STMTS .
    5     | LABEL STMTS . TEXT

    PSEUDO  shift, and go to state 1
    LABEL   shift, and go to state 2

    $default  reduce using rule 3 (TEXT)

    TEXT     go to state 34
    PSEUDOS  go to state 5


State 14

    8 STMTS: STMT .
   10      | STMT . STMTS

    ADD     shift, and go to state 7
    MOV     shift, and go to state 8
    STR     shift, and go to state 9
    LDR     shift, and go to state 10
    BX      shift, and go to state 11
    PSEUDO  shift, and go to state 12

    PSEUDO    [reduce using rule 8 (STMTS)]
    $default  reduce using rule 8 (STMTS)

    STMTS  go to state 35
    STMT   go to state 14


State 15

    0 $accept: Start $end .

    $default  accept


State 16

    4 TEXT: PSEUDOS TEXT .

    $default  reduce using rule 4 (TEXT)


State 17

   32 SPECIAL_REG: FP .

    $default  reduce using rule 32 (SPECIAL_REG)


State 18

   33 SPECIAL_REG: SP .

    $default  reduce using rule 33 (SPECIAL_REG)


State 19

   34 SPECIAL_REG: LR .

    $default  reduce using rule 34 (SPECIAL_REG)


State 20

   35 SPECIAL_REG: IP .

    $default  reduce using rule 35 (SPECIAL_REG)


State 21

   30 REGS: REG .

    $default  reduce using rule 30 (REGS)


State 22

   12 STMT: ADD STMT_ADD .

    $default  reduce using rule 12 (STMT)


State 23

   17 STMT_ADD: REGS . ',' REGS ',' IMME
   18         | REGS . ',' REGS ',' REGS

    ','  shift, and go to state 36


State 24

   31 REGS: SPECIAL_REG .

    $default  reduce using rule 31 (REGS)


State 25

   13 STMT: MOV STMT_MOV .

    $default  reduce using rule 13 (STMT)


State 26

   19 STMT_MOV: REGS . ',' REGS
   20         | REGS . ',' IMME

    ','  shift, and go to state 37


State 27

   14 STMT: STR STMT_STR .

    $default  reduce using rule 14 (STMT)


State 28

   21 STMT_STR: REGS . ',' ADDRS
   22         | REGS . ',' ADDRS ',' IMME

    ','  shift, and go to state 38


State 29

   15 STMT: LDR STMT_LDR .

    $default  reduce using rule 15 (STMT)


State 30

   23 STMT_LDR: REGS . ',' ADDRS
   24         | REGS . ',' ADDRS ',' IMME

    ','  shift, and go to state 39


State 31

   25 STMT_BX: LR .

    $default  reduce using rule 25 (STMT_BX)


State 32

   16 STMT: BX STMT_BX .

    $default  reduce using rule 16 (STMT)


State 33

   11 STMTS: PSEUDO STMTS .

    $default  reduce using rule 11 (STMTS)


State 34

    5 TEXT: LABEL STMTS TEXT .

    $default  reduce using rule 5 (TEXT)


State 35

   10 STMTS: STMT STMTS .

    $default  reduce using rule 10 (STMTS)


State 36

   17 STMT_ADD: REGS ',' . REGS ',' IMME
   18         | REGS ',' . REGS ',' REGS

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    REGS         go to state 40
    SPECIAL_REG  go to state 24


State 37

   19 STMT_MOV: REGS ',' . REGS
   20         | REGS ',' . IMME

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21
    '#'  shift, and go to state 41

    REGS         go to state 42
    SPECIAL_REG  go to state 24
    IMME         go to state 43


State 38

   21 STMT_STR: REGS ',' . ADDRS
   22         | REGS ',' . ADDRS ',' IMME

    '['  shift, and go to state 44

    ADDRS  go to state 45
    ADDR   go to state 46


State 39

   23 STMT_LDR: REGS ',' . ADDRS
   24         | REGS ',' . ADDRS ',' IMME

    '['  shift, and go to state 44

    ADDRS  go to state 47
    ADDR   go to state 46


State 40

   17 STMT_ADD: REGS ',' REGS . ',' IMME
   18         | REGS ',' REGS . ',' REGS

    ','  shift, and go to state 48


State 41

   36 IMME: '#' . UnaryExp

    NUMBER  shift, and go to state 49
    '-'     shift, and go to state 50

    UnaryExp  go to state 51


State 42

   19 STMT_MOV: REGS ',' REGS .

    $default  reduce using rule 19 (STMT_MOV)


State 43

   20 STMT_MOV: REGS ',' IMME .

    $default  reduce using rule 20 (STMT_MOV)


State 44

   28 ADDR: '[' . REGS ']'
   29     | '[' . REGS ',' IMME ']'

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21

    REGS         go to state 52
    SPECIAL_REG  go to state 24


State 45

   21 STMT_STR: REGS ',' ADDRS .
   22         | REGS ',' ADDRS . ',' IMME

    ','  shift, and go to state 53

    $default  reduce using rule 21 (STMT_STR)


State 46

   26 ADDRS: ADDR .
   27      | ADDR . '!'

    '!'  shift, and go to state 54

    $default  reduce using rule 26 (ADDRS)


State 47

   23 STMT_LDR: REGS ',' ADDRS .
   24         | REGS ',' ADDRS . ',' IMME

    ','  shift, and go to state 55

    $default  reduce using rule 23 (STMT_LDR)


State 48

   17 STMT_ADD: REGS ',' REGS ',' . IMME
   18         | REGS ',' REGS ',' . REGS

    FP   shift, and go to state 17
    SP   shift, and go to state 18
    LR   shift, and go to state 19
    IP   shift, and go to state 20
    REG  shift, and go to state 21
    '#'  shift, and go to state 41

    REGS         go to state 56
    SPECIAL_REG  go to state 24
    IMME         go to state 57


State 49

   37 UnaryExp: NUMBER .

    $default  reduce using rule 37 (UnaryExp)


State 50

   38 UnaryExp: '-' . NUMBER

    NUMBER  shift, and go to state 58


State 51

   36 IMME: '#' UnaryExp .

    $default  reduce using rule 36 (IMME)


State 52

   28 ADDR: '[' REGS . ']'
   29     | '[' REGS . ',' IMME ']'

    ','  shift, and go to state 59
    ']'  shift, and go to state 60


State 53

   22 STMT_STR: REGS ',' ADDRS ',' . IMME

    '#'  shift, and go to state 41

    IMME  go to state 61


State 54

   27 ADDRS: ADDR '!' .

    $default  reduce using rule 27 (ADDRS)


State 55

   24 STMT_LDR: REGS ',' ADDRS ',' . IMME

    '#'  shift, and go to state 41

    IMME  go to state 62


State 56

   18 STMT_ADD: REGS ',' REGS ',' REGS .

    $default  reduce using rule 18 (STMT_ADD)


State 57

   17 STMT_ADD: REGS ',' REGS ',' IMME .

    $default  reduce using rule 17 (STMT_ADD)


State 58

   38 UnaryExp: '-' NUMBER .

    $default  reduce using rule 38 (UnaryExp)


State 59

   29 ADDR: '[' REGS ',' . IMME ']'

    '#'  shift, and go to state 41

    IMME  go to state 63


State 60

   28 ADDR: '[' REGS ']' .

    $default  reduce using rule 28 (ADDR)


State 61

   22 STMT_STR: REGS ',' ADDRS ',' IMME .

    $default  reduce using rule 22 (STMT_STR)


State 62

   24 STMT_LDR: REGS ',' ADDRS ',' IMME .

    $default  reduce using rule 24 (STMT_LDR)


State 63

   29 ADDR: '[' REGS ',' IMME . ']'

    ']'  shift, and go to state 64


State 64

   29 ADDR: '[' REGS ',' IMME ']' .

    $default  reduce using rule 29 (ADDR)
